# soli-proxy

./: .gitignore  .gitignore.swp  .gitmessage  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml  install.sh  proxy.conf  proxy.conf.sample
.cursor/rules/: commit-messages.mdc
.github/workflows/: CLAUDE.md  ci.yml
scripts/: backend_echo.rs  benchmark.sh  generate-cert.sh  generate-certs.sh
scripts/git-hooks/: prepare-commit-msg
scripts/lua/: auth.lua  example_auth.lua  example_observability.lua  example_response.lua  example_routing.lua  rate_limit.lua
sites/_admin/: README.md  app.infos  package-lock.json  package.json  tailwind.config.js
sites/_admin/app/controllers/: CLAUDE.md  apps_controller.sl  circuit_breaker_controller.sl  config_controller.sl  home_controller.sl  metrics_controller.sl  routes_controller.sl
sites/_admin/app/helpers/: application_helper.sl
sites/_admin/app/middleware/: CLAUDE.md  auth.sl  cors.sl
sites/_admin/app/views/apps/: CLAUDE.md  index.html.erb
sites/_admin/app/views/circuit_breaker/: index.html.erb
sites/_admin/app/views/config/: index.html.erb
sites/_admin/app/views/home/: CLAUDE.md  index.html.erb
sites/_admin/app/views/layouts/: CLAUDE.md  application.html.erb
sites/_admin/app/views/metrics/: CLAUDE.md  index.html.erb
sites/_admin/app/views/routes/: CLAUDE.md  index.html.erb
sites/_admin/config/: CLAUDE.md  routes.sl
sites/_admin/public/css/: CLAUDE.md  app.css  output.css
sites/_admin/public/js/: CLAUDE.md  admin.js
src/: acme.rs  circuit_breaker.rs  lib.rs  main.rs  metrics.rs  pool.rs  shutdown.rs  tls.rs
src/admin/: handlers.rs  mod.rs
src/app/: deployment.rs  mod.rs  port_manager.rs
src/auth/: mod.rs
src/config/: mod.rs  serializer.rs
src/scripting/: mod.rs
src/server/: mod.rs
tests/: integration_tests.rs
www/: index.html
