[package]
name = "soli-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "httptest"
path = "src/bin/httptest.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2"] }
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"
bytes = "1"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pki-types = "1"
rcgen = "0.12"
webpki-roots = "0.26"
regex = "1"
notify = "6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
anyhow = "1.0"
serde_json = "1.0"
base64 = "0.22"
sha2 = "0.10"
url = "2.5"
arc-swap = "1.7"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"
tower = { version = "0.5", features = ["full"] }
pem = "3"
x509-parser = "0.16"
instant-acme = "0.8"
rustls-pemfile = "2"
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
